# oxide_downloader

./: Cargo.toml  README.md  config.yaml
src/: download.rs  main.rs
