[package]
name = "oxide_downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "^0.11.18", features = ["blocking"] }
threadpool = { git = "https://github.com/desertcod98/rusty-threadpool.git" }
config = "^0.13.3"
directories = "^5.0"
indicatif = "^0.17.4"
crypto-hash = "^0.3.4"
